--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 </head>
 <body>
     <header>
-        <h1>欢迎来到我的个人网站</h1>
+        <h1>Seco个人站</h1>
         <nav>
             <ul>
                 <li><a href="#about">关于我</a></li>
