--- a/index.html
+++ b/index.html
@@ -6,68 +6,18 @@
     <title>我的个人网站</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f0f0f0;
-        }
-        header {
-            background-color: #333;
-            color: #fff;
-            text-align: center;
-            padding: 1em 0;
-        }
-        nav ul {
-            list-style: none;
-            padding: 0;
-        }
-        nav ul li {
-            display: inline;
-            margin: 0 10px;
-        }
-        nav ul li a {
-            color: #fff;
-            text-decoration: none;
-        }
-        section {
-            padding: 2em;
-            text-align: center;
-        }
-        footer {
-            background-color: #333;
-            color: #fff;
-            text-align: center;
-            padding: 1em 0;
-            position: absolute;
-            bottom: 0;
-            width: 100%;
-        }
-    </style>
-</head>
-<body>
-    <header>
-        <h1>Seco个人站</h1>
-        <nav>
-            <ul>
-                <li><a href="#about">关于我</a></li>
-                <li><a href="#projects">项目</a></li>
-                <li><a href="#contact">联系</a></li>
-            </ul>
-        </nav>
-    </header>
-    <section id="about">
-        <h2>关于我</h2>
-        <p>你好，我是一名热爱编程和设计的开发者。</p>
-    </section>
-    <section id="projects">
-        <h2>项目</h2>
-        <p>这里是我参与的一些项目。</p>
-    </section>
-    <section id="contact">
-        <h2>联系</h2>
-        <p>你可以通过电子邮件与我联系：<a href="mailto:youremail@example.com">youremail@example.com</a></p>
-    </section>
-    <footer>
-    </footer>
+            <body id="ihup">
+  <div id="issw" class="htmlpage-row c1186">
+    <div id="irnz" class="htmlpage-cell c1194">
+      <div id="io3i" class="c13854">Seco个人站
+      </div>
+    </div>
+  </div>
+  <div id="ibee" class="htmlpage-row c1226">
+    <div id="idxc" class="htmlpage-cell c1234">
+      <div id="ikgaj" class="c17341">正在开发中
+      </div>
+    </div>
+  </div>
 </body>
 </html>
